--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,55 +5,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:orientation="vertical"
-    tools:context=".activities.MainActivity">
-
-    <!--顶部-->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@color/colorPrimaryDark"
-        android:fitsSystemWindows="true"
-        android:gravity="center_vertical">
-
-        <ImageView
-            android:id="@+id/user_main"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="10dp"
-            android:src="@drawable/user"
-            android:textSize="23sp" />
-
-        <TextView
-            android:id="@+id/top_search"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="10dp"
-            android:layout_weight="1"
-            android:background="@drawable/search_bg_selector"
-            android:clickable="true"
-            android:drawableLeft="@drawable/search_left_selector"
-            android:gravity="center_vertical"
-            android:text="查找地点,公交,地点"
-            android:textColor="@drawable/search_text_selector" />
-
-
-        <ImageView
-            android:id="@+id/list_main"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:src="@drawable/sunny" />
-
-        <TextView
-            android:layout_width="18dp"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="8dp"
-            android:text="晴天"
-            android:textColor="#fff" />
-
-    </LinearLayout>
+    tools:context=".activities.MapActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
