--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -3,6 +3,9 @@
 
     <!--主界面状态栏-->
     <style name="MyTheme" parent="AppTheme">
-        <item name="android:statusBarColor">@color/colorPrimaryDark</item>
+
+
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:windowTranslucentStatus">false</item>
     </style>
 </resources>
