--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#FF4081</color>
     <color name="item_selected">#eee</color>
     <color name="my_hint">#aaa</color>
+    <color name="color_text_normal">#aaa</color>
+    <color name="color_text_selected">#1296db</color>
 </resources>
